plugins/kotlin/idea/tests/testData/multiplatform/chainedTypeAliasRefinement/js/js.kt
actual typealias <!LINE_MARKER("descr='Has declaration in common module'")!>JvmJs<!> = Int

fun jsTest(arg: Common) {
    takeCommon(arg)
}